# CuteCI

./: .gitignore  CMakeLists.txt  README.md
Docs/: Diff.md  Library.md
Include/: CuteCI.h
Source/Diff/: CMakeLists.txt  Main.cpp
